added changes to navbar

--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,16 @@ body, html {
 	background-color: #fff;
 }
 
+.fa-1x {
+    font-size: 1.5rem;
+  }
+  .navbar-toggler.toggler-example {
+    cursor: pointer;
+  }
+  .dark-blue-text {
+    color: #0A38F5;
+  }
+  
 .bg-section-primary{
     background-color: #F8F9FA;
 }
