--- a/styles/style.css
+++ b/styles/style.css
@@ -3,13 +3,8 @@
 	padding: 0;
 	text-decoration: none;
 	list-style:none;
-	list-style:none;
 	border: none;
 	outline: none;
-}
-
-body {
-    margin: 10%;
 }
 
 body, html {
@@ -17,24 +12,174 @@ body, html {
 	height:100%;
 }
 
+body {
+    margin: 10%;
+}
+
 .navbar-custom{
 	background-color: #fff;
 }
 
-.fa-1x {
-    font-size: 1.5rem;
-  }
-  .navbar-toggler.toggler-example {
-    cursor: pointer;
-  }
-  .dark-blue-text {
-    color: #0A38F5;
-  }
-  
-.bg-section-primary{
-    background-color: #F8F9FA;
+.navbar-brand{
+	margin-left: 15%;
 }
 
-.btn{
+.text-navbar{
+	margin-right: 15%;
+
+}
+
+.color-link{
+	color: #fff;
+	outline: none;
+	text-decoration: none;
+}
+
+.color-link:hover{
+	color: #fff;
+}
+
+.btn-navbar{
     background-color: #2937F0;
+	padding:10px;
+	border-radius: 30px;	
+}
+
+.btn-navbar:hover{
+	background-color: #141a71;
+}
+
+.talk{
+	vertical-align: middle;
+}
+
+.contenedor-1{
+	height: 100vh;
+	background-color: #F8F9FA;
+	display: grid;
+	grid-template-columns: 50% 50%;
+	padding: 15%;
+
+}
+
+.contenedor-2{
+	height: 100vh;
+	display: grid;
+	background-image: url(/img/ImgBackGround/cropped-shot-of-female-hands-drawing-on-digital-graphic-tablet-with-pen-sitting-with-cup-of-coffee-o.jpg);
+	background-position: center center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	position: relative;
+}
+
+.contenedor-2:before{
+	content: '';
+	position: absolute;
+	background-color: rgba(0, 0, 0, 0.6);
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+
+.text-1{ 
+	z-index: 4;
+
+}
+
+.text-2{
+	display: flex;
+
+}
+
+.h1-1{
+	font-size: 4rem;
+	font-family: Newsreader;
+	
+}
+
+.h1-2{
+	color: #fff;
+	font-size: 4rem;
+	font-family: Newsreader;
+	position: relative;
+	margin-top: 15%;
+	margin-bottom: 15%;
+	margin-left: 15%;
+}
+
+.btn-factoria{ 
+	color: #fff;
+	font-size: 15px;
+	font-family: Mulish;
+	font-weight: lighter;
+	text-decoration: none;
+	border: 1px solid #fff;
+	border-radius: 30px;
+	position: relative;	
+	margin-left: 15%;
+	padding: 7px;
+
+}
+
+.btn-factoria:hover{
+	background-color: #141a71;
+}
+
+
+.p-1{
+	font-size: 1rem;
+	font-family: Mulish;
+	color: #77757D;
+}
+
+.iphone{
+	justify-self: center;
+	margin-top: -15%;
+}
+
+.purple-circle{
+	border-radius: 50%;
+	height: 300px;
+	width: 300px;
+	background: linear-gradient(45deg, #4330ED 0%, #9F1AE2 100%) ;
+	position: absolute;
+	bottom: 33%;
+	float: left;
+	z-index: 1;
+}
+
+.img-iphone{
+	height: 414px;
+	width: 211px;
+	padding: auto;
+	position: relative;
+	z-index: 3;
+	
+}
+
+.footer-basic{
+	padding:20px 0;
+	color: #3F6473;
+	background-color: black;
+	text-align:center;
+	
+}
+
+.footer-basic ul{
+	padding:0;
+	color: #3F6473;
+	list-style:none;
+	text-align: center;
+	font-size:18px;
+	line-height:1.6;
+	margin-bottom:0;
+}
+
+.footer-basic li{
+	display: inline;
+}
+.footer-basic a{
+	color: #3F6473;
+	text-decoration: none;
 }
